云票票会员中心

--- a/website/yunpiaopiao/src/main/webapp/resources/css/login/login.css
+++ b/website/yunpiaopiao/src/main/webapp/resources/css/login/login.css
@@ -66,7 +66,7 @@
 .z_ul1 li.z_li4 input{ width:280px; height:40px; background:#2084eb; border:1px solid #2084eb; border-radius:3px; color:#fff; font-size:18px; margin-left:60px; font-family:"微软雅黑"; cursor:pointer;}
 
 
-
+.z_ul1 li.mf_li input.mf_input{float:left;width:80px; height:30px !important;background:#fff; border:1px solid #ddd;}
 
 
 
