--- a/website/yunpiaopiao/src/main/webapp/resources/css/personal/personal.css
+++ b/website/yunpiaopiao/src/main/webapp/resources/css/personal/personal.css
@@ -162,6 +162,6 @@
 
 
 
-
+.z_ul1 li.mf_li input.mf_input{float:left;width:80px; height:30px !important;background:#fff; border:1px solid #ddd;}
 
 
