--- a/website/luoluo/src/main/webapp/resources/css/easyui.css
+++ b/website/luoluo/src/main/webapp/resources/css/easyui.css
@@ -1903,6 +1903,7 @@
 .datebox .combo-arrow {
   background-image: url('images/datebox_arrow.png');
   background-position: center center;
+  background-size:6px 6px;
 }
 .datebox-button {
   background-color: #F4F4F4;
@@ -1952,7 +1953,7 @@
   opacity: 0.6;
   filter: alpha(opacity=60);
   display: block;
-  font-size: 1px;
+  font-size: 5px;
   width: 18px;
   height: 10px;
   width: 100%;
@@ -1983,10 +1984,12 @@
   filter: alpha(opacity=60);
 }
 .spinner-arrow-up {
-  background: url('images/spinner_arrows.png') no-repeat 1px center;
+  background: url('images/spinner_arrows.png') no-repeat center;
+  background-size:8px 8px;
 }
 .spinner-arrow-down {
-  background: url('images/spinner_arrows.png') no-repeat -15px center;
+  background: url('images/arrow_down_2.png') no-repeat  center;
+   background-size:8px 8px;
 }
 .spinner {
   border-color: #95B8E7;
